--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -22,3 +22,15 @@ table td, th  {
     background: #CD5C5C;
     cursor: pointer;
 }
+
+h1{
+    color: #4a2bff;
+}
+
+h2{
+    color: #ff171c;
+}
+
+footer{
+    margin-top:60px;
+}
