--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -12,11 +12,12 @@
     <nav class="navbar navbar-inverse">
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand" th:href="@{/login}">Login page</a>
+                <a class="navbar-brand" th:href="@{/login}">Авторизация</a>
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a th:href="@{/}">Home</a></li>
+                    <li class="active"><a th:href="@{/}">Главная</a></li>
+                    <li><a th:href="@{/logout}">Выход</a></li>
                 </ul>
             </div>
         </div>
