--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -5,6 +5,11 @@
 </head>
 <body>
 <div th:fragment="footer">
+    <div class="container">
+        <footer>
+            <script type="text/javascript" src="webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        </footer>
+    </div>
 
 </div>
 </body>
