--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -2,6 +2,7 @@
 <head>
     <div th:fragment="header-css">
         <!-- this is header-css -->
+        <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/3.3.7/css/bootstrap.min.css" />
         <link rel="stylesheet" th:href="@{/main.css}" href="/main.css" />
     </div>
 </head>
